--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 </head>
 <body>
     <div id="container">
-        <div class="box-1  box avatar"></div>
-        <div class="box-2  box"></div>
-        <div class="box-3  box"></div>
-        <div class="box-4  box"></div>
-        <div class="box-5  box"></div>
-        <div class="box-6  box"></div>
-        <div class="box-7  box"></div>
-        <div class="box-8  box"></div>
-        <div class="box-9  box"></div>
+        <div class="box-1 box avatar"></div>
+        <div class="box-2 box"></div>
+        <div class="box-3 box"></div>
+        <div class="box-4 box"></div>
+        <div class="box-5 box"></div>
+        <div class="box-6 box"></div>
+        <div class="box-7 box"></div>
+        <div class="box-8 box"></div>
+        <div class="box-9 box"></div>
         <div class="box-10 box"></div>
         <div class="box-11 box"></div>
         <div class="box-12 box"></div>
@@ -29,6 +29,22 @@
         <div class="box-18 box"></div>
         <div class="box-19 box"></div>
         <div class="box-20 box"></div>
+        <div class="box-21 box"></div>
+        <div class="box-22 box"></div>
+        <div class="box-23 box"></div>
+    </div>
+    <div class="buttons">
+        <div class="back">
+            <div class="btn">Move Back</div>
+        </div>
+
+        <div class="forward">
+            <div class = "btn">Move Forward</div>
+        </div>
+    </div>
+
+    <div class="message_body">
+        <div class="message"></div>
     </div>
 </body>
 
